--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -11,14 +11,16 @@
         android:label="@string/app_name" >
         <activity
             android:name="WordLookupActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="WordDefinitionDetailsActivity"/>
+        <activity android:name="WordDefinitionDetailsActivity"
+            android:theme="@android:style/Theme.NoTitleBar"/>
     </application>
 
 </manifest>
