--- a/mobile/pom.xml
+++ b/mobile/pom.xml
@@ -1,19 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-      <groupId>org.verba</groupId>
-      <artifactId>verba-parent</artifactId>
-      <version>1.0-SNAPSHOT</version>
+    <groupId>org.verba</groupId>
+    <artifactId>verba-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
-    
-  <groupId>org.verba</groupId>
-  <artifactId>core</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
 
-  <name>Verba Core</name>
+  <groupId>org.verba</groupId>
+  <artifactId>mobile</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>apk</packaging>
+  <name>Verba Mobile</name>
 
   <dependencies>
     <dependency>
@@ -21,25 +21,14 @@
       <artifactId>android</artifactId>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>de.akquinet.android.androlog</groupId>
+      <artifactId>androlog</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>1.9.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId>
-      <version>1.3.RC2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.3</version>
+      <groupId>org.verba</groupId>
+      <artifactId>core</artifactId>
+      <type>jar</type>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
@@ -48,6 +37,9 @@
         <groupId>com.jayway.maven.plugins.android.generation2</groupId>
         <artifactId>android-maven-plugin</artifactId>
         <configuration>
+          <assetsDirectory>${project.basedir}/assets</assetsDirectory>
+          <resourceDirectory>${project.basedir}/res</resourceDirectory>
+          <nativeLibrariesDirectory>${project.basedir}/src/main/native</nativeLibrariesDirectory>
           <sdk>
             <platform>${android-platform}</platform>
           </sdk>
