--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,14 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-      <groupId>org.verba</groupId>
-      <artifactId>verba-parent</artifactId>
-      <version>1.0-SNAPSHOT</version>
+    <groupId>org.verba</groupId>
+    <artifactId>verba-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
-    
-  <groupId>org.verba</groupId>
+
   <artifactId>core</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Verba Core</name>
@@ -61,6 +59,23 @@
         <configuration>
           <source>${java-version}</source>
           <target>${java-version}</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <configuration>
+          <check>
+            <branchRate>${coverage.rate}</branchRate>
+            <lineRate>${coverage.rate}</lineRate>
+            <haltOnFailure>true</haltOnFailure>
+          </check>
+          <instrumentation>
+            <excludes>
+              <exclude>org/verba/xdxf/node/XdxfNodeType.class</exclude>
+              <exclude>org/verba/stardict/WordDefinitionPartType.class</exclude>
+            </excludes>
+          </instrumentation>
         </configuration>
       </plugin>
     </plugins>
