--- a/mobile/pom.xml
+++ b/mobile/pom.xml
@@ -9,9 +9,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.verba</groupId>
   <artifactId>mobile</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>apk</packaging>
   <name>Verba Mobile</name>
 
@@ -23,6 +21,17 @@
     <dependency>
       <groupId>de.akquinet.android.androlog</groupId>
       <artifactId>androlog</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.pivotallabs</groupId>
+      <artifactId>robolectric</artifactId>
+      <version>1.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.verba</groupId>
@@ -53,6 +62,23 @@
         <configuration>
           <source>${java-version}</source>
           <target>${java-version}</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <configuration>
+          <check>
+            <branchRate>${coverage.rate}</branchRate>
+            <lineRate>${coverage.rate}</lineRate>
+            <haltOnFailure>true</haltOnFailure>
+          </check>
+          <instrumentation>
+            <excludes>
+              <exclude>org/verba/mobile/R.class</exclude>
+              <exclude>org/verba/mobile/R$*.class</exclude>
+            </excludes>
+          </instrumentation>
         </configuration>
       </plugin>
     </plugins>
