--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <android-platform>10</android-platform>
         <java-version>1.6</java-version>
+        <coverage.rate>85</coverage.rate>
     </properties>
 
     <dependencyManagement>
@@ -65,6 +66,11 @@
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin-version}</version>
+                </plugin>
+                <plugin>
+                  <groupId>org.codehaus.mojo</groupId>
+                  <artifactId>cobertura-maven-plugin</artifactId>
+                  <version>2.5.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
