--- a/mobile/pom.xml
+++ b/mobile/pom.xml
@@ -34,6 +34,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.verba</groupId>
       <artifactId>core</artifactId>
       <type>jar</type>
