--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name="WordDefinitionDetailsActivity"
             android:theme="@android:style/Theme.NoTitleBar"/>
+        <service android:name="DictionaryDataService" android:exported="false"/>
     </application>
 
 </manifest>
