--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -8,9 +8,8 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
-            android:name=".PhraseLookupActivity"
+        android:label="@string/app_name">
+        <activity android:name="MainPanel"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
@@ -19,8 +18,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PhraseDefinitionDetailsActivity"
+        <activity
+            android:name="PhraseLookupActivity"
             android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name="PhraseDefinitionDetailsActivity"
+            android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name="EditCardActivity"
+            android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name="ViewCardActivity"
+            android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name="CardSetPickerActivity"
+            android:label="@string/pickCardSetLabel"/>
+        <activity android:name="CardSetViewerActivity"
+            android:label="@string/pickCardLabel"/>
         <service android:name="DictionaryDataService" android:exported="false"/>
     </application>
 
