--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -9,28 +9,32 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
-        <activity android:name="MainPanel"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name="PhraseLookupActivity"
-            android:theme="@android:style/Theme.NoTitleBar"/>
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:windowSoftInputMode="stateUnspecified|adjustPan">
+            
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        
+        </activity>
         <activity android:name="PhraseDefinitionDetailsActivity"
-            android:theme="@android:style/Theme.NoTitleBar"/>
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:windowSoftInputMode="stateUnspecified|adjustPan"/>
         <activity android:name="EditCardActivity"
-            android:theme="@android:style/Theme.NoTitleBar"/>
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:windowSoftInputMode="stateUnspecified|adjustPan"/>
         <activity android:name="ViewCardActivity"
-            android:theme="@android:style/Theme.NoTitleBar"/>
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:windowSoftInputMode="stateUnspecified|adjustPan"/>
         <activity android:name="CardSetPickerActivity"
-            android:label="@string/pickCardSetLabel"/>
+            android:label="@string/pickCardSetLabel"
+            android:windowSoftInputMode="stateUnspecified|adjustPan"/>
         <activity android:name="CardSetViewerActivity"
-            android:label="@string/pickCardLabel"/>
+            android:label="@string/pickCardLabel"
+            android:windowSoftInputMode="stateUnspecified|adjustPan"/>
         <service android:name="DictionaryDataService" android:exported="false"/>
     </application>
 
