--- a/mobile/pom.xml
+++ b/mobile/pom.xml
@@ -50,6 +50,11 @@
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.roboguice</groupId>
+      <artifactId>roboguice</artifactId>
+      <version>2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
