--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 
     <properties>
         <platform.version>2.3.1</platform.version>
-        <maven-compiler-plugin-version>2.4</maven-compiler-plugin-version>
-        <android-maven-plugin-version>3.1.1</android-maven-plugin-version>
+        <maven-compiler-plugin-version>3.0</maven-compiler-plugin-version>
+        <android-maven-plugin-version>3.5.0</android-maven-plugin-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <android-platform>11</android-platform>
         <java-version>1.6</java-version>
@@ -62,6 +62,9 @@
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
                     <version>${android-maven-plugin-version}</version>
+                    <configuration>
+                      <release>true</release>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
