--- a/mobile/pom.xml
+++ b/mobile/pom.xml
@@ -69,7 +69,7 @@
             <platform>${android-platform}</platform>
           </sdk>
           <deleteConflictingFiles>true</deleteConflictingFiles>
-          <undeployBeforeDeploy>true</undeployBeforeDeploy>
+          <undeployBeforeDeploy>false</undeployBeforeDeploy>
         </configuration>
         <extensions>true</extensions>
       </plugin>
