--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -4,15 +4,15 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="16"/>
 
     <application
         android:name="org.verba.mobile.Verba"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:theme="@style/VerbaTheme">
         <activity
             android:name="PhraseLookupActivity"
-            android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateUnspecified|adjustPan">
             
             <intent-filter>
@@ -27,13 +27,10 @@
             android:screenOrientation="nosensor"
             android:configChanges="keyboardHidden|orientation"/>
         <activity android:name="PhraseDefinitionDetailsActivity"
-            android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateUnspecified|adjustPan"/>
         <activity android:name="EditCardActivity"
-            android:theme="@android:style/Theme.NoTitleBar"
-            android:windowSoftInputMode="stateUnspecified|adjustPan"/>
+            android:windowSoftInputMode="stateHidden|adjustPan"/>
         <activity android:name="ViewCardActivity"
-            android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateUnspecified|adjustPan"/>
         <activity android:name="CardSetPickerActivity"
             android:label="@string/pickCardSetLabel"
