--- a/mobile/pom.xml
+++ b/mobile/pom.xml
@@ -19,6 +19,10 @@
       <artifactId>android</artifactId>
     </dependency>
     <dependency>
+        <groupId>com.google.android</groupId>
+        <artifactId>support-v4</artifactId>
+    </dependency>
+    <dependency>
       <groupId>de.akquinet.android.androlog</groupId>
       <artifactId>androlog</artifactId>
     </dependency>
@@ -54,6 +58,23 @@
       <groupId>org.roboguice</groupId>
       <artifactId>roboguice</artifactId>
       <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.mobeta.android.dslv</groupId>
+      <artifactId>drag-sort-listview</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+      <type>apklib</type>
+    </dependency>
+    <dependency>
+      <groupId>com.actionbarsherlock</groupId>
+      <artifactId>actionbarsherlock</artifactId>
+      <version>4.2.0</version>
+      <type>apklib</type>
+    </dependency>
+    <dependency>
+      <groupId>com.github.rtyley</groupId>
+      <artifactId>roboguice-sherlock</artifactId>
+      <version>1.5</version>
     </dependency>
   </dependencies>
   <build>
