--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,12 @@
     </modules>
 
     <properties>
-        <platform.version>2.3.1</platform.version>
+        <platform.version>4.0.1.2</platform.version>
         <maven-compiler-plugin-version>3.0</maven-compiler-plugin-version>
         <android-maven-plugin-version>3.5.0</android-maven-plugin-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <android-platform>11</android-platform>
+        <android-platform>15</android-platform>
+        <android.support-v4.version>r7</android.support-v4.version>
         <java-version>1.6</java-version>
         <coverage.rate>85</coverage.rate>
     </properties>
@@ -38,7 +39,11 @@
                 <version>${platform.version}</version>
                 <scope>provided</scope>
             </dependency>
-
+            <dependency>
+                <groupId>com.google.android</groupId>
+                <artifactId>support-v4</artifactId>
+                <version>${android.support-v4.version}</version>
+            </dependency>
             <!-- Androlog is a logging and reporting library for Android -->
             <dependency>
                 <groupId>de.akquinet.android.androlog</groupId>
