--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:name="org.verba.mobile.Verba"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/VerbaTheme">
+        android:theme="@style/Verba.Theme">
         <activity
             android:name="PhraseLookupActivity"
             android:windowSoftInputMode="stateUnspecified|adjustPan">
