--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -9,11 +9,11 @@
     <application
         android:name="org.verba.mobile.Verba"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/Verba.Theme">
+        android:label="@string/app_name">
         <activity
             android:name="PhraseLookupActivity"
-            android:windowSoftInputMode="stateUnspecified|adjustPan">
+            android:windowSoftInputMode="stateUnspecified|adjustPan"
+            android:theme="@style/Verba.Theme">
             
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,18 +25,27 @@
             android:label="@string/loadDictionariesDialogLabel"
             android:windowSoftInputMode="stateUnspecified|adjustPan"
             android:screenOrientation="nosensor"
-            android:configChanges="keyboardHidden|orientation"/>
+            android:configChanges="keyboardHidden|orientation"
+            android:theme="@style/Verba.Theme"/>
         <activity android:name="PhraseDefinitionDetailsActivity"
-            android:windowSoftInputMode="stateUnspecified|adjustPan"/>
+            android:windowSoftInputMode="stateUnspecified|adjustPan"
+            android:theme="@style/Verba.Theme"/>
         <activity android:name="EditCardActivity"
-            android:windowSoftInputMode="stateHidden|adjustPan"/>
+            android:windowSoftInputMode="stateHidden|adjustPan"
+            android:theme="@style/Verba.Theme"/>
         <activity android:name="ViewCardActivity"
-            android:windowSoftInputMode="stateUnspecified|adjustPan"/>
+            android:windowSoftInputMode="stateUnspecified|adjustPan"
+            android:theme="@style/Verba.Theme"/>
         <activity android:name="CardSetPickerActivity"
             android:label="@string/pickCardSetLabel"
-            android:windowSoftInputMode="stateUnspecified|adjustPan"/>
+            android:windowSoftInputMode="stateUnspecified|adjustPan"
+            android:theme="@style/Verba.Theme"/>
         <activity android:name="CardSetViewerActivity"
             android:label="@string/pickCardLabel"
+            android:windowSoftInputMode="stateUnspecified|adjustPan"
+            android:theme="@style/Verba.Theme"/>
+        <activity android:name="VerbaPreferences"
+            android:label="@string/verbaPreferencesLabel"
             android:windowSoftInputMode="stateUnspecified|adjustPan"/>
     </application>
 
