--- a/mobile/pom.xml
+++ b/mobile/pom.xml
@@ -76,6 +76,16 @@
       <artifactId>roboguice-sherlock</artifactId>
       <version>1.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.robobinding</groupId>
+      <artifactId>robobinding</artifactId>
+      <version>0.8.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>1.6.11</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -93,6 +103,28 @@
           <undeployBeforeDeploy>false</undeployBeforeDeploy>
         </configuration>
         <extensions>true</extensions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>aspectj-maven-plugin</artifactId>
+        <version>1.4</version>
+        <executions>
+        	<execution>
+        		<goals>
+        			<goal>compile</goal>
+        		</goals>
+        	</execution>
+        </executions>
+        <configuration>
+        	<aspectLibraries>
+        		<aspectLibrary>
+        			<groupId>org.robobinding</groupId>
+        			<artifactId>robobinding</artifactId>
+        		</aspectLibrary>
+        	</aspectLibraries>
+        	<source>${java-version}</source>
+        	<target>${java-version}</target>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
